profile alignment problem solved

--- a/app/assets/stylesheets/components/_card_planner.scss
+++ b/app/assets/stylesheets/components/_card_planner.scss
@@ -1,8 +1,9 @@
 .card-planner {
   border: none;
   width: 100%;
-  .card-title h5 {
+  .card-title h6 {
     color: #444;
+    font-size: 17px;
     margin-bottom: 0;
     }
   .planner-recipe-img {
